--- a/follow-list.ipynb
+++ b/follow-list.ipynb
@@ -9,12 +9,13 @@
     "from login import Login\n",
     "import requests\n",
     "import json\n",
-    "from typing import List, Tuple\n",
+    "from typing import List\n",
     "import time\n",
     "import random\n",
     "\n",
     "headers = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)     AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/ 537.36 Edg/107.0.1418.62'}\n"
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/ 537.36 Edg/107.0.1418.62'\n",
+    "}\n"
    ]
   },
   {
@@ -85,7 +86,7 @@
    "source": [
     "# Get mid\n",
     "\n",
-    "def get_mid(session) -> int:\n",
+    "def get_mid(session: requests.Session) -> int:\n",
     "    res = bilibili_session.get(\n",
     "        url='https://api.bilibili.com/nav', headers=headers)\n",
     "    res = json.loads(res.text)\n",
@@ -99,18 +100,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_total_follow(session):\n",
+    "# Get the total number of followings\n",
+    "\n",
+    "def get_total_follow(session: requests.Session) -> int:\n",
     "    mid = get_mid(session)\n",
     "    res = session.get(url='https://api.bilibili.com/x/relation/followings',\n",
-    "                      headers=headers, params={'vmid': mid})\n",
+    "                      headers=headers,\n",
+    "                      params={'vmid': mid})\n",
     "    data = json.loads(res.text)['data']\n",
     "    return data['total']\n",
     "\n",
+    "# Get following list\n",
     "\n",
-    "def get_follow_list(session, page=1):\n",
+    "\n",
+    "def get_follow_list(session: requests.Session, page: int = 1) -> List[dict]:\n",
     "    mid = get_mid(session)\n",
     "    res = session.get(url='https://api.bilibili.com/x/relation/followings',\n",
-    "                      headers=headers, params={'vmid': mid, 'pn': page, 'ps': 100})\n",
+    "                      headers=headers,\n",
+    "                      params={'vmid': mid, 'pn': page, 'ps': 50})\n",
     "    data = json.loads(res.text)['data']\n",
     "    return data['list']\n"
    ]
@@ -165,6 +172,7 @@
    "outputs": [],
    "source": [
     "# Save results\n",
+    "\n",
     "import pickle\n",
     "with open('following.pickle', 'wb') as f:\n",
     "    pickle.dump(follow_list, f)\n"
