--- a/following-results.ipynb
+++ b/following-results.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
-    "from typing import List, Tuple\n",
+    "from typing import List\n",
     "import time\n",
     "import random\n",
-    "import pickle"
+    "import pickle\n"
    ]
   },
   {
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "headers = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64)     AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/ 537.36 Edg/107.0.1418.62'}"
+    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/ 537.36 Edg/107.0.1418.62'\n",
+    "}\n"
    ]
   },
   {
@@ -43,7 +44,7 @@
    "source": [
     "with open('following.pickle', 'rb') as f:\n",
     "    following_list = pickle.load(f)\n",
-    "len(following_list)"
+    "len(following_list)\n"
    ]
   },
   {
@@ -63,7 +64,7 @@
     }
    ],
    "source": [
-    "following_list[0].keys()"
+    "following_list[0].keys()\n"
    ]
   },
   {
@@ -72,16 +73,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_fans(mid:int)->int:\n",
-    "    res = requests.get(url='https://api.bilibili.com/x/relation/stat',headers = headers,params={'vmid':mid})\n",
+    "def get_fans(mid: int) -> int:\n",
+    "    res = requests.get(url='https://api.bilibili.com/x/relation/stat',\n",
+    "                       headers=headers, params={'vmid': mid})\n",
     "    res = json.loads(res.text)\n",
     "    data = res['data']\n",
-    "    return data['follower']"
+    "    return data['follower']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -92,10 +94,10 @@
        " 'time': '2022-12-06',\n",
        " 'special': '否',\n",
        " 'face': 'https://i0.hdslb.com/bfs/face/8297704cd928e35a91ac7c98ab02a98e8d2ef3c6.jpg',\n",
-       " 'fans': 86913}"
+       " 'fans': 86926}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +107,7 @@
     "# 0: all\n",
     "# 1: basic\n",
     "# 2: few\n",
-    "def get_UP_info(following_data: dict, level: int = 0):\n",
+    "def get_UP_info(following_data: dict, level: int = 0)->dict:\n",
     "    info = {\n",
     "        'name': following_data['uname'],\n",
     "        'uid': following_data['mid'],\n",
@@ -125,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -179,13 +181,13 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({'名称':[],\n",
-    "                   'UID':[],\n",
-    "                   '关注时间':[],\n",
-    "                   '特别关注':[],\n",
-    "                   '头像链接':[],\n",
-    "                   '粉丝数':[]})\n",
-    "df"
+    "df = pd.DataFrame({'名称': [],\n",
+    "                   'UID': [],\n",
+    "                   '关注时间': [],\n",
+    "                   '特别关注': [],\n",
+    "                   '头像链接': [],\n",
+    "                   '粉丝数': []})\n",
+    "df\n"
    ]
   },
   {
@@ -194,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n"
    ]
   },
   {
@@ -311,10 +313,10 @@
    ],
    "source": [
     "for data in tqdm(following_list):\n",
-    "    time.sleep(random.randint(1,3))\n",
+    "    time.sleep(random.randint(1, 3))\n",
     "    info = get_UP_info(data)\n",
     "    df.loc[len(df.index)] = info.values()\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -424,7 +426,7 @@
    ],
    "source": [
     "df['UID'] = df['UID'].astype(str)\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -547,17 +549,17 @@
    ],
    "source": [
     "df['主页'] = 'https://space.bilibili.com/' + df['UID']\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_excel('following-results.xlsx')\n",
-    "df.to_csv('following-results.csv')"
+    "df.to_csv('following-results.csv')\n"
    ]
   }
  ],
