--- a/follow-list.ipynb
+++ b/follow-list.ipynb
@@ -157,7 +157,7 @@
     "total = get_total_follow(bilibili_session)\n",
     "print(total)\n",
     "follow_list = []\n",
-    "for page in range(1, total // 50 + 2):\n",
+    "for page in range(1, total // 51 + 2): #I get the data using 50, but there will be a bug if the total number is 800 or 850\n",
     "    time.sleep(random.randint(1, 3))\n",
     "    ups = get_follow_list(bilibili_session, page)\n",
     "    print(page, len(ups))\n",
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
