--- a/video-info.ipynb
+++ b/video-info.ipynb
@@ -761,6 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_new['UID'] = df_new['UID'].astype(str)\n",
     "df_new.to_excel('following-whole-info.xlsx')\n",
     "df_new.to_csv('following-whole-info.csv')\n"
    ]
@@ -782,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
