--- a/follow-list.ipynb
+++ b/follow-list.ipynb
@@ -167,15 +167,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save results\n",
     "\n",
-    "import pickle\n",
-    "with open('following.pickle', 'wb') as f:\n",
-    "    pickle.dump(follow_list, f)\n"
+    "with open('following.json','w') as f:\n",
+    "    f.write(json.dumps(follow_list))"
    ]
   }
  ],
@@ -195,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
