--- a/following-results.ipynb
+++ b/following-results.ipynb
@@ -10,8 +10,7 @@
     "import json\n",
     "from typing import List\n",
     "import time\n",
-    "import random\n",
-    "import pickle\n"
+    "import random\n"
    ]
   },
   {
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,20 +35,20 @@
        "830"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open('following.pickle', 'rb') as f:\n",
-    "    following_list = pickle.load(f)\n",
+    "with open('following.json', 'r') as f:\n",
+    "    following_list = json.loads(f.read())\n",
     "len(following_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,13 +57,13 @@
        "dict_keys(['mid', 'attribute', 'mtime', 'tag', 'special', 'contract_info', 'uname', 'face', 'sign', 'face_nft', 'official_verify', 'vip', 'nft_icon', 'rec_reason'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "following_list[0].keys()\n"
+    "following_list[0].keys()"
    ]
   },
   {
@@ -579,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
