--- a/video-info.ipynb
+++ b/video-info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,6 @@
     "#from typing import Tuple\n",
     "import time\n",
     "import random\n",
-    "import pickle\n",
     "from login import Login\n",
     "import pandas as pd\n",
     "import tqdm\n",
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,15 +31,15 @@
        "830"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open('following.pickle', 'rb') as f:\n",
-    "    following_list = pickle.load(f)\n",
-    "len(following_list)\n"
+    "with open('following.json', 'r') as f:\n",
+    "    following_list = json.loads(f.read())\n",
+    "len(following_list)"
    ]
   },
   {
@@ -783,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
