--- a/video-info.ipynb
+++ b/video-info.ipynb
@@ -142,19 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'total': 258,\n",
-       " 'fields_count': {'动画': 214, '舞蹈': 6, '资讯': 1, '音乐': 30, '游戏': 7},\n",
-       " 'newest': '2022-12-12',\n",
-       " 'oldest': '2020-12-14'}"
+       "{'total': 123,\n",
+       " 'fields_count': {'动画': 26, '鬼畜': 2, '生活': 2, '动物圈': 4, '音乐': 1, '游戏': 88},\n",
+       " 'newest': '2022-12-16',\n",
+       " 'oldest': '2019-04-28'}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,10 +165,14 @@
     "        res = requests.get(url='http://api.bilibili.com/x/space/arc/search',\n",
     "                           headers=headers, params={'mid': mid, 'pn': 1, 'ps': 1})\n",
     "        res = json.loads(res.text)\n",
-    "        data = res['data']\n",
+    "        \n",
     "        code = res['code']\n",
+    "        \n",
     "        if code == 0:\n",
+    "            data = res['data']\n",
     "            break\n",
+    "        else:\n",
+    "            print(code,res['message'])\n",
     "        time.sleep(random.randint(1, 3))\n",
     "    total = data['page']['count']\n",
     "\n",
@@ -186,6 +190,8 @@
     "            code = res['code']\n",
     "            if code == 0:\n",
     "                break\n",
+    "            else:\n",
+    "                print(code,res['message'])\n",
     "            time.sleep(random.randint(1, 3))\n",
     "        data = res['data']\n",
     "        oldest = data['list']['vlist'][-1]['created']\n",
@@ -205,7 +211,7 @@
     "\n",
     "\n",
     "get_up_videos(258150656)\n",
-    "get_up_videos(672328094)\n"
+    "get_up_videos(415890389)\n"
    ]
   },
   {
