--- a/video-info.ipynb
+++ b/video-info.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
        " 'oldest': '2019-04-28'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def get_up_videos(mid: int) -> dict:\n",
-    "    while True:\n",
+    "    for _ in range(3):\n",
     "        res = requests.get(url='http://api.bilibili.com/x/space/arc/search',\n",
     "                           headers=headers, params={'mid': mid, 'pn': 1, 'ps': 1})\n",
     "        res = json.loads(res.text)\n",
@@ -183,7 +183,7 @@
     "        newest = data['list']['vlist'][0]['created']\n",
     "        newest = time.strftime('%Y-%m-%d', time.localtime(newest))\n",
     "        page = total // 51 + 1\n",
-    "        while True:\n",
+    "        for _ in range(5):\n",
     "            res = requests.get(url='http://api.bilibili.com/x/space/arc/search',\n",
     "                               headers=headers, params={'mid': mid, 'pn': page, 'ps': 50})\n",
     "            res = json.loads(res.text)\n",
