--- a/following-results.ipynb
+++ b/following-results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "headers = {\n",
     "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/107.0.0.0 Safari/ 537.36 Edg/107.0.1418.62'\n",
-    "    \n",
     "}\n"
    ]
   },
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
        "dict_keys(['mid', 'attribute', 'mtime', 'tag', 'special', 'contract_info', 'uname', 'face', 'sign', 'face_nft', 'official_verify', 'vip', 'nft_icon', 'rec_reason'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +93,10 @@
        " 'time': '2022-12-06',\n",
        " 'special': '否',\n",
        " 'face': 'https://i0.hdslb.com/bfs/face/8297704cd928e35a91ac7c98ab02a98e8d2ef3c6.jpg',\n",
-       " 'fans': 87122}"
+       " 'fans': 87690}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +174,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,23 +191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.3'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm\n",
+    "pd.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 830/830 [30:06<00:00,  2.18s/it]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.32s/it]\n"
      ]
     },
     {
@@ -248,7 +259,7 @@
        "      <td>2022-12-08</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i2.hdslb.com/bfs/face/ce83957d60ce9800...</td>\n",
-       "      <td>286680</td>\n",
+       "      <td>290972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -266,7 +277,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i0.hdslb.com/bfs/face/8297704cd928e35a...</td>\n",
-       "      <td>86914</td>\n",
+       "      <td>87690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -275,7 +286,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i2.hdslb.com/bfs/face/6dcffadade0fd367...</td>\n",
-       "      <td>13897</td>\n",
+       "      <td>17503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -284,7 +295,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>是</td>\n",
        "      <td>https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...</td>\n",
-       "      <td>639</td>\n",
+       "      <td>1297</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -299,20 +310,20 @@
        "4  VitoShen涤非  3493075427002798  2022-12-06    是   \n",
        "\n",
        "                                                头像链接     粉丝数  \n",
-       "0  https://i2.hdslb.com/bfs/face/ce83957d60ce9800...  286680  \n",
+       "0  https://i2.hdslb.com/bfs/face/ce83957d60ce9800...  290972  \n",
        "1  http://i0.hdslb.com/bfs/face/70e5621d3ca80fe1e...      12  \n",
-       "2  https://i0.hdslb.com/bfs/face/8297704cd928e35a...   86914  \n",
-       "3  https://i2.hdslb.com/bfs/face/6dcffadade0fd367...   13897  \n",
-       "4  https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...     639  "
+       "2  https://i0.hdslb.com/bfs/face/8297704cd928e35a...   87690  \n",
+       "3  https://i2.hdslb.com/bfs/face/6dcffadade0fd367...   17503  \n",
+       "4  https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...    1297  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for data in tqdm(following_list):\n",
+    "for data in tqdm(following_list[0:10]):\n",
     "    time.sleep(random.randint(1, 3))\n",
     "    info = get_UP_info(data)\n",
     "    df.loc[len(df.index)] = info.values()\n",
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +372,7 @@
        "      <td>2022-12-08</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i2.hdslb.com/bfs/face/ce83957d60ce9800...</td>\n",
-       "      <td>286680</td>\n",
+       "      <td>290972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -379,7 +390,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i0.hdslb.com/bfs/face/8297704cd928e35a...</td>\n",
-       "      <td>86914</td>\n",
+       "      <td>87690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -388,7 +399,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>否</td>\n",
        "      <td>https://i2.hdslb.com/bfs/face/6dcffadade0fd367...</td>\n",
-       "      <td>13897</td>\n",
+       "      <td>17503</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -397,7 +408,7 @@
        "      <td>2022-12-06</td>\n",
        "      <td>是</td>\n",
        "      <td>https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...</td>\n",
-       "      <td>639</td>\n",
+       "      <td>1297</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,14 +423,14 @@
        "4  VitoShen涤非  3493075427002798  2022-12-06    是   \n",
        "\n",
        "                                                头像链接     粉丝数  \n",
-       "0  https://i2.hdslb.com/bfs/face/ce83957d60ce9800...  286680  \n",
+       "0  https://i2.hdslb.com/bfs/face/ce83957d60ce9800...  290972  \n",
        "1  http://i0.hdslb.com/bfs/face/70e5621d3ca80fe1e...      12  \n",
-       "2  https://i0.hdslb.com/bfs/face/8297704cd928e35a...   86914  \n",
-       "3  https://i2.hdslb.com/bfs/face/6dcffadade0fd367...   13897  \n",
-       "4  https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...     639  "
+       "2  https://i0.hdslb.com/bfs/face/8297704cd928e35a...   87690  \n",
+       "3  https://i2.hdslb.com/bfs/face/6dcffadade0fd367...   17503  \n",
+       "4  https://i1.hdslb.com/bfs/face/e8c393b710c5bd1c...    1297  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, May 19 2021, 13:12:57) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
